--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <model-viewer style="display: flex; height: 80vh;" src="./assets/globus.glb" poster="./assets/globus.glb" shadow-intensity="1" ar camera-controls touch-action="pan-y" alt="A 3D model carousel">
+    <model-viewer style="display: flex; width: 100%; height: 100%;" src="./assets/globus.glb" poster="./assets/globus.glb" ios-src="./assets/globus.usdz" shadow-intensity="1" ar auto-rotate camera-controls touch-action="pan-y" alt="A 3D model carousel">
   
         <button slot="ar-button" id="ar-button">
           View in your space
