--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     
-    <model-viewer style="display: flex; width: 100%; height: 100%;" src="./assets/globus.glb" poster="./assets/globus.glb" ios-src="./assets/globus.usdz" shadow-intensity="1" ar auto-rotate camera-controls touch-action="pan-y" alt="A 3D model carousel">
+    <model-viewer style="display: flex; width: 100%; height: 100%;" src="./assets/globus.glb" poster="./assets/globus.glb" ios-src="./assets/globus.usdz" orientation="0 180deg 0" position="0 0 0" shadow-intensity="1" ar ar-modes="webxr scene-viewer quick-look" auto-rotate camera-controls shadow-intensity="1"
+    shadow-softness="0.6" touch-action="pan-y" alt="A 3D model carousel">
   
         <button slot="ar-button" id="ar-button">
           View in your space
