--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <a-scene embedded arjs="sourceType: webcam;">
-      <a-marker type="pattern" url="./assets/globusimage.png">
+        <a-marker type="barcode" value="5">
         <model-viewer
           src="./assets/globus.glb"
           ios-src="./assets/globus.usdz"
