--- a/index.html
+++ b/index.html
@@ -8,14 +8,53 @@
   <!-- 💁 OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
 </head>
 <body>
+
+  <model-viewer 
+  style="display: flex; width: 100%; height: 100%;" 
+  src="./assets/globus.glb" 
+  poster="./assets/globusimage.png" 
+  ios-src="./assets/globus.usdz" 
+  orientation="0 0deg 0" 
+  position="0 0 0" 
+  shadow-intensity="1" 
+  ar 
+  ar-modes="webxr scene-viewer quick-look" 
+  auto-rotate 
+  camera-controls 
+  shadow-softness="0.6" 
+  touch-action="pan-y" 
+  alt="A 3D model carousel"
+  scale="0.02 0.02 0.02"
+  position="0 0 -2">
+  
+  <button slot="ar-button" id="ar-button">
+    View in your space
+  </button>
+  
+  <div id="ar-prompt">
+    <img src="./assets/hand.jpg">
+  </div>
+  
+  <button id="ar-failure">
+    AR is not tracking!
+  </button>
+  
+  <div class="slider">
+    <div class="slides">
+      <button class="slide selected" onclick="switchSrc(this, 'globus')" style="background-image: url('./assets/globusimage.png');">
+      </button>
+    </div>
+  </div>
+</model-viewer>
+
     
-    <model-viewer 
+    <!-- <model-viewer 
     style="display: flex; width: 100%; height: 100%;" src="./assets/globus.glb" 
     poster="./assets/globusimage.png" ios-src="./assets/globus.usdz" orientation="0 0deg 0" 
     position="0 0 0" shadow-intensity="1" ar ar-modes="webxr scene-viewer quick-look" auto-rotate camera-controls shadow-intensity="1"
     shadow-softness="0.6" touch-action="pan-y" alt="A 3D model carousel"
     scale="0.02 0.02 0.02"
-  position="0 0 -2" >
+  position="0 0 -2" > -->
   
         <button slot="ar-button" id="ar-button">
           View in your space
