--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       
         <div class="slider">
           <div class="slides">
-            <button class="slide selected" onclick="switchSrc(this, 'globus')" style="background-image: url('./assets/globusimage.png');">
+            <button class="slide selected" onclick="switchSrc(this, 'globus')" style="background-image: url('./assets/globus.png');">
       
             </button>  
           </button></div>
