--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <model-viewer 
   style="display: flex; width: 100%; height: 100%;" 
-  src="./assets/globus.glb" 
+  src="https://srv832.hstgr.io:7443/c787e1008ed83bed/files/glbfiles/globus1.glb" 
   poster="./assets/globusimage.png" 
   ios-src="./assets/globus.usdz" 
   orientation="0 0deg 0" 
@@ -61,7 +61,7 @@
         const modelViewer = document.querySelector("model-viewer");
       
         window.switchSrc = (element, name) => {
-          const base = "./assets/" + name;
+          const base = "https://srv832.hstgr.io:7443/c787e1008ed83bed/files/glbfiles/globus1";
           modelViewer.src = base + '.glb';
           modelViewer.poster = base + '.png';
           const slides = document.querySelectorAll(".slide");
